Add missing stl and update sample configs

--- a/Software/T0-SB2209-Revo-LDO.cfg
+++ b/Software/T0-SB2209-Revo-LDO.cfg
@@ -3,7 +3,6 @@
 #####################################################################
 [mcu EBBCan0]
 # ~/klippy-env/bin/python ~/klipper/scripts/canbus_query.py can0
-# python3 ~/katapult/scripts/flash_can.py -i can0 -q
 canbus_uuid: 1929c14acd7c
 # canbus_uuid: c0c02a1c29c9
 
@@ -143,3 +142,10 @@ gcode_z_offset: 0
 params_park_x: 14.00
 params_park_y: 84.00
 params_park_z: 250.0
+
+params_input_shaper_type_x: 'ei'
+params_input_shaper_freq_x: 42.600
+params_input_shaper_damping_ratio_x: 0.100000
+params_input_shaper_type_y: '2hump_ei'
+params_input_shaper_freq_y: 39.000
+params_input_shaper_damping_ratio_y: 0.100000
