--- a/Software/T1-SB2209-Revo-LDO.cfg
+++ b/Software/T1-SB2209-Revo-LDO.cfg
@@ -142,3 +142,10 @@ fan: multi_fan T1_partfan
 params_park_x: 96.00
 params_park_y: 84.00
 params_park_z: 250.0
+
+params_input_shaper_type_x: '3hump_ei'
+params_input_shaper_freq_x: 80.200
+params_input_shaper_damping_ratio_x: 0.100000
+params_input_shaper_type_y: 'mzv'
+params_input_shaper_freq_y: 26.600
+params_input_shaper_damping_ratio_y: 0.100000
