--- a/Software/config/printer_single.cfg
+++ b/Software/config/printer_single.cfg
@@ -1,17 +1,15 @@
+[include shell_command.cfg]
 [include mainsail.cfg]
 [include homing.cfg]
 [include toolchanger.cfg]
 [include calibrate-offsets.cfg]
+[include tc-config-manage.cfg]
 
-[include ./macros/macro-general.cfg]
-[include ./macros/macro-print.cfg]
+[include macro-general.cfg]
+[include macro-print.cfg]
+[include macro-testing.cfg]
 
-# [include Settings_1_printer-single.cfg]
-
-[include Settings_2_printer-multi.cfg]
-[include ./macros/macro-tc-nozzle_clean.cfg]
-
-[exclude_object]
+[include ./T0-SB2209-Revo-LDO.cfg]
 
 ####################################################################################
 ## 	                MCU
@@ -25,9 +23,9 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0C0035001150535556323420-if00
 [printer]
 kinematics: corexy           # Printer type：corexy
 max_velocity: 300            # Maximum speed (max. 300)
-max_accel: 5000              # Maximum acceleration (max. 4000)
-max_z_velocity: 15           # Z-axis maximum speed
-max_z_accel: 350             # Z-axis maximum acceleration
+max_accel: 7500              # Maximum acceleration (max. 4000)
+max_z_velocity: 30           # Z-axis maximum speed
+max_z_accel: 300             # Z-axis maximum acceleration
 square_corner_velocity: 5.0  # Square corner speed
 
 ####################################################################################
@@ -235,10 +233,6 @@ heater: heater_bed            # Related equipment: heater_bed
 heater_temp: 50               # How many degrees does the heat bed reach to activate the fan
 fan_speed: 0.4                # Fan speed
 
-# # --------------------------------------------------------------------
-# [fan_generic Nevermore]
-# pin: PA8
-
 #--------------------------------------------------------------------
 [heater_fan Nevermore] # Skirt fan 2
 pin: PA8
@@ -292,29 +286,80 @@ aliases:
     EXP2_5=PB2, EXP2_6=PA7,         # Slot in the socket on this side
     EXP2_7=PC15, EXP2_8=<RST>,
     EXP2_9=<GND>, EXP2_10=PC5
-    
-####################################################################################
-#	                         Rounded movement
-####################################################################################
-[rounded_path]
-resolution: 0.2
-replace_g0: True
 
 ####################################################################################
-#	                         Skew Correction
+# 	                   Bed Grid Calibration
 ####################################################################################
-[skew_correction]
+[bed_mesh]
+speed: 200                   # Calibration speed
+horizontal_move_z: 10        # Z-axis movement speed
+mesh_min: 30,30              # Minimum calibration point coordinates x, y
+mesh_max: 320, 320           # Maximum calibration point coordinates x, y  #350mm=320,320
+probe_count: 11,11           # Number of sampling points (7X7 is 49 points)
+mesh_pps: 2,2                # Number of supplementary sampling points
+algorithm: bicubic           # algorithmic model
+bicubic_tension: 0.2         # Algorithmic interpolation don't move
+# zero_reference_position: 175, 175
+
+####################################################################################
+#	                         Gantry levelling 
+####################################################################################
+[quad_gantry_level]
+#	Gantry Corners for 350mm Build
+gantry_corners:
+	-60,-10
+	410,420
+#  Probe points
+points:
+	50,50
+	50,300
+	300,300
+	300,50
+
+speed: 150                          # Levelling speed
+horizontal_move_z: 15               # Z-axis starting height
+retries: 10                         # Number of out-of-tolerance retries
+retry_tolerance: 0.0075             # Sampling tolerance
+max_adjust: 20                      # Maximum adjustment stroke for levelling
 
 ####################################################################################
 #	                         Klipper Screen
 ####################################################################################
+[display_status]
+[pause_resume]
 [virtual_sdcard]
 path: ~/printer_data/gcodes
 
-[display_status]
-[pause_resume]
+####################################################################################
+#	                             Others
+####################################################################################
+[skew_correction]
+[exclude_object]
+[input_shaper]
+# [save_variables]
+# filename: ~/printer_data/config/offset-variables.cfg
 
+####################################################################################
+#                          Session Variables
+####################################################################################
+#--------------------------------------------------------------------
+[gcode_macro _home]
+description: Centre of print area
+variable_xh: 175.0
+variable_yh: 175.0
+variable_zh: 10.0
+variable_no_of_toolhead: 1
+gcode:
+    RESPOND TYPE=echo MSG='Print area centre: {xh}, {yh}, {zh}'
+    RESPOND TYPE=echo MSG='Number of TH: {no_of_toolhead}'
 
+#--------------------------------------------------------------------
+[gcode_macro _WIPE_TOWER_LOCATION]
+variable_wx: 0.0
+variable_wy: 0.0
+gcode:
+    RESPOND TYPE=echo MSG="WIPE_TOWER_X = {wx}"
+    RESPOND TYPE=echo MSG="WIPE_TOWER_Y = {wy}"
 
 ####################################################################################
 #	                         SAVES
@@ -376,22 +421,8 @@ path: ~/printer_data/gcodes
 #*# min_y = 149.17
 #*# max_y = 200.47
 #*#
-#*# [input_shaper]
-#*# shaper_type_x = 3hump_ei
-#*# shaper_freq_x = 77.0
-#*# shaper_type_y = mzv
-#*# shaper_freq_y = 28.0
-#*#
 #*# [tool_probe T0]
-#*# z_offset = -1.112500
-#*#
-#*# [tool T1]
-#*# gcode_x_offset = 0.037500
-#*# gcode_y_offset = 0.415625
-#*# gcode_z_offset = 0.225000
-#*#
-#*# [tool_probe T1]
-#*# z_offset = -0.940000
+#*# z_offset = -1.035000
 #*#
 #*# [extruder]
 #*# control = pid
@@ -399,8 +430,3 @@ path: ~/printer_data/gcodes
 #*# pid_ki = 4.284
 #*# pid_kd = 75.574
 #*#
-#*# [extruder1]
-#*# control = pid
-#*# pid_kp = 32.480
-#*# pid_ki = 3.437
-#*# pid_kd = 76.735
