--- a/Software/homing.cfg
+++ b/Software/homing.cfg
@@ -11,8 +11,8 @@ gcode:
     {% set a = 0 %}
 
     ## Set up variables
-    {% set center_x = printer["gcode_macro _homing"].xh|float %}
-    {% set center_y = printer["gcode_macro _homing"].yh|float %}
+    {% set center_x = printer["gcode_macro _home"].xh|float %}
+    {% set center_y = printer["gcode_macro _home"].yh|float %}
     {% set cur_z = printer.toolhead.position[2]|float %}
 
     ##  Engage trigger variables according to the input
@@ -34,15 +34,15 @@ gcode:
     {% if x == 1 or y == 1 or a == 1 %}
         G91                                                                    # Relative mode
         {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
-            {% if cur_z < 15.0 %}
+            {% if cur_z < 40.0 %}
                 RESPOND TYPE=echo MSG='Nozzle Clearance...'
-                G1 Z{ 15 - cur_z } F1500                                       # move Z up
+                G1 Z{ 40.0 - cur_z } F1500                                     # move Z up
             {% endif %}
         {% else %}                                                             # but if x is not homed
             {% if  printer.tool_probe_endstop.active_tool_number|int == -1 %}
                 RESPOND TYPE=echo MSG='Nozzle Clearance...'
                 SET_KINEMATIC_POSITION Z=0                                     # Set curent Z position as 0
-                G1 Z+15 F3000                                                  # move Z up
+                G1 Z+40 F3000                                                  # move Z up
                 {% if a != 1 %}
                     M84                                                        # remove the temporary postions
                 {% endif %}
@@ -60,7 +60,7 @@ gcode:
         {% else %}
             RESPOND TYPE=echo MSG='Umbilical Clearance...'
             G28 Z                                                              # temporary home z
-            G1 Z+15 F3000                                                      # Move Z up off the bed
+            G1 Z+40 F3000                                                      # Move Z up off the bed
         {% endif %}
         G90                                                                    # Asolute mode
         
@@ -88,12 +88,12 @@ gcode:
         RESPOND TYPE=echo MSG='Home Z...'
         {% if "xyz" in printer.toolhead.homed_axes %}                          # if printer is already homed
             G91
-            {% if cur_z < 15.0 %}
+            {% if cur_z < 40.0 %}
                 RESPOND TYPE=echo MSG='Nozzle Clearance...'
-                G1 Z{ 15 - cur_z } F1500                                       # move Z up to 15mm
+                G1 Z{ 40.0 - cur_z } F1500                                     # move Z up to 15mm
             {% endif %}
             G90
-            G1 X{center_x} Y{center_y} F10000                                  # Move to centre of the bed
+            G1 X{center_x} Y{center_y} Z40 F10000                              # Move to centre of the bed
         {% endif %}
         
         G28 Z                                                                  # Home Z
