--- a/Software/macro-tc-nozzle_clean.cfg
+++ b/Software/macro-tc-nozzle_clean.cfg
@@ -3,37 +3,38 @@
 #####################################################################
 [gcode_macro _SCRUB]
 gcode:
-    STOP_TOOL_PROBE_CRASH_DETECTION
     {% for n in range(5) %}
-        G1 X177 Y36 F3000
+        G1 X177 Y36 F9000
         G1 X173 Y26
         G1 X177 Y12
         G1 X173 Y15
-        G1 X177 Y26 F9000
+        G1 X177 Y26
         G1 X175 Y20
         G1 X175 Y12
         G1 X175 Y20
         G1 X175 Y12
-        G1 X175 Y20
+        G1 X175 Y20 F3000
     {% endfor %}
-    START_TOOL_PROBE_CRASH_DETECTION
 
 ## ------------------------------------------------------------------
 [gcode_macro _CLEAN]
+variable_clean_temp: 225
 gcode:
-    M104 S210    # Make sure that the heater is on.
+    M104 S{clean_temp}
     
     G1 Y120 F9000
     G1 X175 F9000
     G1 Y40  F9000
 
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM=200
+    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM=220
     M104 S0
     
     G1 Y26  F3000
+    STOP_TOOL_PROBE_CRASH_DETECTION
     _SCRUB
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM=180
+    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM=190
     _SCRUB
+    START_TOOL_PROBE_CRASH_DETECTION
     
     G1 X175 Y15  F6000
     G1 X175 Y120 F9000
@@ -44,6 +45,7 @@ gcode:
 [gcode_macro CLEAN_NOZZLE]
 gcode:
     {% set tools = printer.toolchanger.tool_numbers %}
+    {% set clean_temp = printer["gcode_macro _CLEAN"].clean_temp %}
     
     {% if "xyz" in printer.toolhead.homed_axes %}       # Check if axes are homed
         G90
@@ -56,7 +58,7 @@ gcode:
         ## Clean selected tool -------------------------------------
         {% if params.TOOL != null %}
             RESPOND TYPE=echo MSG='Clean T{params.TOOL}...'
-            M104 T{params.TOOL} S210
+            M104 T{params.TOOL} S{clean_temp}
             T{params.TOOL}
             _CLEAN
         ## Clean all tools -----------------------------------------
@@ -64,7 +66,7 @@ gcode:
             RESPOND TYPE=echo MSG='Clean all tools...'
             
             {% for tool in tools %}
-                M104 T{tool} S210
+                M104 T{tool} S{clean_temp}
             {% endfor %}
 
             {% for tool in tools|reverse %}
