--- a/Software/toolchanger.cfg
+++ b/Software/toolchanger.cfg
@@ -1,33 +1,23 @@
+#--------------------------------------------------------------------
 [rounded_path]
 resolution: 0.2
 replace_g0: True
 
+#--------------------------------------------------------------------
 [tool_probe_endstop]
 crash_gcode:
     RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.' 
     M84
     TURN_OFF_HEATERS
 
-[tools_calibrate]
-pin: ^!PF5
-travel_speed: 20  # mms to travel sideways for XY probing
-spread: 7  # mms to travel down from top for XY probing
-lower_z: 1.0  # The speed (in mm/sec) to move tools down onto the probe
-speed: 2  # The speed (in mm/sec) to retract between probes
-lift_speed: 4  # Z Lift after probing done, should be greater than any Z variance between tools
-final_lift_z: 6 
-sample_retract_dist:2
-samples_tolerance:0.05
-samples:5
-samples_result: median # median, average
-
+#--------------------------------------------------------------------
 [toolchanger]
 t_command_restore_axis: Z
 params_safe_y: 120
 params_close_y: 50
-params_min_z: 35
-params_fast_speed: 10000 # Go as fast as we can
-params_path_speed: 5000
+params_min_z: 30
+params_fast_speed: 30000   # Speed conversion:
+params_path_speed: 7000    # 1500=40mm/s
 
 params_type = 'sb_misschanger'
 params_sb_misschanger_path: [
@@ -47,6 +37,14 @@ params_sb_misschanger_path: [
                              {'x':-6.0,     'y':-40,     'f':1.00}
                             ]
 
+# Default shaper params
+params_input_shaper_type_x: 'ei'
+params_input_shaper_freq_x: 42.600
+params_input_shaper_damping_ratio_x: 0.100000
+params_input_shaper_type_y: '2hump_ei'
+params_input_shaper_freq_y: 39.000
+params_input_shaper_damping_ratio_y: 0.100000
+
 initialize_gcode:
     DETECT_ACTIVE_TOOL_PROBE
     _INITIALIZE_FROM_DETECTED_TOOL
@@ -61,9 +59,25 @@ after_change_gcode:
     {% set tn = "T"+(tool.tool_number|string) %}
     {% if printer["gcode_macro " + tn ] %}
         SET_GCODE_VARIABLE MACRO={tn} VARIABLE=color VALUE="'c44'"
-    {% endif %}    
-    {% if tool.params_input_shaper_freq_x %}
-        SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y}
+    {% endif %}
+
+    ## load Input Shaper frequency, type and damping ratio 
+    ## (if none or some params_input_shaper_* are set in tool, use default input_shaper_params)
+    {% if tool.params_input_shaper_freq_x and tool.params_input_shaper_freq_y %}
+      {% if tool.params_input_shaper_type_x and tool.params_input_shaper_type_y %}
+        {% if tool.params_input_shaper_damping_ratio_x and tool.params_input_shaper_damping_ratio_y %}
+          SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={tool.params_input_shaper_type_x} SHAPER_TYPE_Y={tool.params_input_shaper_type_y} DAMPING_RATIO_X={tool.params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={tool.params_input_shaper_damping_ratio_y}
+        {% else %}
+          SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={tool.params_input_shaper_type_x} SHAPER_TYPE_Y={tool.params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
+        {% endif %}
+      {% else %}
+        SET_INPUT_SHAPER SHAPER_FREQ_X={tool.params_input_shaper_freq_x} SHAPER_FREQ_Y={tool.params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
+      {% endif %}
+    {% else %}
+      SET_INPUT_SHAPER SHAPER_FREQ_X={params_input_shaper_freq_x} SHAPER_FREQ_Y={params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
+    {% endif %}
+    {% if not printer['gcode_macro PRINT_START'].printing %}
+        STOP_TOOL_PROBE_CRASH_DETECTION
     {% endif %}
     
 dropoff_gcode:
@@ -74,29 +88,22 @@ dropoff_gcode:
     {% set path = tool['params_' ~ tool.params_type ~ '_path'] %}
     {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}
     {% set cur_z = printer.toolhead.position[2]|float %}
-    RESPOND TYPE=echo MSG='Dropping off {tool.name}'
     
-    ##############  Clearance move    ##############
-    # Move 1 mm up to avoid crashing into things, unless the it is lower than params_min_z
+    ##############  Move to the dock  #########################
     G90
-    {% if cur_z <= tool.params_min_z %}
-        G0 Z{ tool.params_min_z+1.0 } F{fast}
+    {% if cur_z < tool.params_min_z %}
+        G0 X{ x } Y{ tool.params_safe_y } Z{ tool.params_min_z+1.0 } F{fast}
     {% else %}
-        G0 Z{ [cur_z+1.0, max_z]|min } F{fast}
+        G0 X{ x } Y{ tool.params_safe_y } Z{ [cur_z+1.0, max_z]|min } F{fast}
     {% endif %}
-    
-    ##############  Move to the dock  ##############    
-    ROUNDED_G0 X={x} Y={tool.params_safe_y} D=0 F={fast}         # Move to the right safe Y position
-    {% if 'z' in path[0] %}                                       # For changers with stationary docks
-        ROUNDED_G0 Z={z + path[0]['z']|float} D=20 F={fast}       ## Move to the first point in the path, in the z axis
-    {% endif %}                                                   # Regardess,
-    ROUNDED_G0 Y={y + path[0]['y']|float} D=0 F={fast}            # Move to the first point in the path, in the y axis
+    ROUNDED_G0 Y={ y + path[0]['y']|float } D=0 F={fast}    # Move to the first point in the path, in the y axis
     STOP_TOOL_PROBE_CRASH_DETECTION
     
-    ############## Run the path ##############
+    ############## Run the path ###############################
     {% for pos in path %}
         G0 X{x + pos['x']|float} Y{y + pos['y']|float} F{tool.params_path_speed|float * (pos.get('f', 1.0)|float) }
     {% endfor %}
+    M400
 
 pickup_gcode:
     {% set x = tool.params_park_x|float %} 
@@ -104,10 +111,11 @@ pickup_gcode:
     {% set z = tool.params_park_z|float %} 
     {% set fast = tool.params_fast_speed|float %}
     {% set path = tool['params_' ~ tool.params_type ~ '_path'] %}
-    RESPOND TYPE=echo MSG='Picking up {tool.name}'
+    {% set wx = printer["gcode_macro _WIPE_TOWER_LOCATION"].wx|float %}
+    {% set wy = printer["gcode_macro _WIPE_TOWER_LOCATION"].wy|float %}
     
+    ##############  Fast to the last point  ################
     G90
-    ##############  Fast to the last point  ##############
     ROUNDED_G0 Y={tool.params_close_y} F={fast} D=5
     {% if 'z' in path[0] %}    # For changers that only use YZ
         ROUNDED_G0 X={x} Z={z + path[-1]['z']|float} F={fast} D=5     
@@ -117,44 +125,47 @@ pickup_gcode:
     {% endif %}
     ROUNDED_G0 Y={y + path[-1]['y']|float} F={fast} D=0
 
-    # Wait for temp before actually picking up the tool, while the nozzle is resting on it's pad.
+    ## Wait for temp before actually picking up the tool, while the nozzle is resting on it's pad.
     {% if tool.extruder %}
         M109 T{tool.tool_number} S{printer[tool.extruder].target|int}
     {% endif %}
     
-    # Run the path in reverse
+    ## Run the path in reverse
     {% for pos in path|reverse %}
         G0 X{x + pos['x']|float} Y{y + pos['y']|float} F{tool.params_path_speed|float * (pos.get('f', 1.0)|float) }
     {% endfor %}
-
-    # G4 P200
+    G4 P40
     M400
-
     START_TOOL_PROBE_CRASH_DETECTION T={tool.tool_number}    # Check for crashes.
+    G0 Y{tool.params_safe_y} F{fast}                         # Get to safe y
     
-    # Restore the position with smooth rounded move.
-    ROUNDED_G0 Y={tool.params_safe_y} F={fast} D=0
-
-    {% if 'X' in restore_position and 'Y' in restore_position and 'Z' in restore_position %}
-        ROUNDED_G0 X={restore_position.X} Y={restore_position.Y} Z={restore_position.Z} F={fast} D=0
-    {% else %}
-        {% if 'X' in restore_position and 'Y' in restore_position %}
-            ROUNDED_G0 X={restore_position.X} Y={restore_position.Y} F={fast} D=100
+    ## Restore the position with smooth rounded move.
+    {% if 'X' in restore_position or 'Y' in restore_position or 'Z' in restore_position %}
+        {% if 'X' in restore_position and 'Y' in restore_position and 'Z' in restore_position %}
+            ROUNDED_G0 X={restore_position.X} Y={restore_position.Y} Z={restore_position.Z} F={fast} D=0
         {% else %}
-            {% if 'X' in restore_position %}
-                ROUNDED_G0 X={restore_position.X} F={fast} D=1000
+            {% if 'X' in restore_position and 'Y' in restore_position %}
+                ROUNDED_G0 X={restore_position.X} Y={restore_position.Y} F={fast} D=500
+            {% else %}
+                {% if 'X' in restore_position %}
+                    ROUNDED_G0 X={restore_position.X} F={fast} D=500
+                {% endif %}
+                {% if 'Y' in restore_position %}
+                    ROUNDED_G0 Y={restore_position.Y} F={fast} D=500
+                {% endif %}
             {% endif %}
-            {% if 'Y' in restore_position %}
-                ROUNDED_G0 Y={restore_position.Y} F={fast} D=100
+            {% if 'Z' in restore_position %}
+                {% if wx > 0.5 and wy > tool.params_safe_y and restore_position.Z > 0.2 %}
+                    G0 X{wx} Y{wy} Z{restore_position.Z+0.4} F{fast}
+                {% else %}
+                    G0 Z{restore_position.Z} F{fast}
+                {% endif %}
             {% endif %}
-        {% endif %}
-        {% if 'Z' in restore_position %}
-            ROUNDED_G0 Z={restore_position.Z} F={fast} D=0
         {% endif %}
     {% endif %}
-    
-    ROUNDED_G0 D=0
 
+    ## Disable rounded path
+    ROUNDED_G0 D=0
 
 ####################################################################################
 #                        Marcos overwrite
@@ -196,21 +207,49 @@ gcode:
     {% endif %}
 
 #--------------------------------------------------------------------
-[gcode_macro TOOL_BED_MESH_CALIBRATE]
+[gcode_macro BED_MESH_CALIBRATE]
+rename_existing: BASE_BED_MESH_CALIBRATE
 gcode:
+     ## Bed mesh knows about the probe offset, but not about the tool offset.
+    RESPOND TYPE=echo MSG='TOOL_BED_MESH_CALIBRATE...'
     {% set tool_z_offset = printer[printer.toolchanger.tool].gcode_z_offset %}
     G90 ; absolute mode
     G0 Z10 F1000
-    # Bed mesh knows about the probe offset, but not about the tool offset.
     SET_KINEMATIC_POSITION Z={10.0-tool_z_offset|float}
-    BED_MESH_CALIBRATE ADAPTIVE=1
+    ## BED_MESH_CALIBRATE ADAPTIVE=1
+    BASE_BED_MESH_CALIBRATE ADAPTIVE=1
     G0 Z10 F1000
     SET_KINEMATIC_POSITION Z={10.0+tool_z_offset|float}
 
+#--------------------------------------------------------------------
+[gcode_macro QUAD_GANTRY_LEVEL]
+description: check calibration probe and initialse toolhead before QGL
+rename_existing: _QUAD_GANTRY_LEVEL
+gcode:
+    ## This macro done as such to overcomes some Klipper macro variable quirk.
+    _CPI_CHECK
+    _QGL
 
 ####################################################################################
 #	                         Hidden
 ####################################################################################
+#--------------------------------------------------------------------
+[gcode_macro _CPI_CHECK]
+gcode:
+    TOOL_CALIBRATE_QUERY_PROBE
+    # RESPOND TYPE=echo MSG='Calibration Probe Inactive = {printer.tools_calibrate.calibration_probe_inactive}...'
+    M400
+
+#--------------------------------------------------------------------
+[gcode_macro _QGL]
+gcode:
+    {% if printer.tools_calibrate.calibration_probe_inactive %}
+        INITIALIZE_TOOLCHANGER
+        _QUAD_GANTRY_LEVEL
+    {% else %}
+        RESPOND TYPE=error MSG='CALIBRATION PROBE NOT DOCKED!!!'
+    {% endif %}
+
 #--------------------------------------------------------------------
 [gcode_macro _ADJUST_Z_HOME_FOR_TOOL_OFFSET]
 description: Correct the physical Z endstop offset, relative to TO.
