--- a/Software/macro-print.cfg
+++ b/Software/macro-print.cfg
@@ -1,88 +1,70 @@
-####################################################################################
-#	                         Hidden
-####################################################################################
-#--------------------------------------------------------------------
-[gcode_macro _PRINT_END_FIL]            
-gcode:
-    {% if printer.extruder.temperature > 190 %}
-        G10                                             # Retracting the filament
-        G92 E0                                          # Zeroing the extruder
-    {% else %}
-        RESPOND TYPE=echo MSG='T{tool_nr} is cold...'
-	{% endif %}
-
-####################################################################################
-#	                         Working
-####################################################################################
-#--------------------------------------------------------------------
-[gcode_macro PRINT_START]                                   # Use PRINT_START for the slicer starting script - please customise for your slicer of choice
+#---------------------------------------------------------------------
+[gcode_macro PRINT_START]
 gcode:
     RESPOND TYPE=echo MSG='PRINT_START...'
-    ## Clear nozzle temps -------------------------------------------
-    {% set tools = printer.toolchanger.tool_numbers %}
-    {% for tool in tools %}
-        {% set para = "T"~tool~"_TEMP" %}
-        {% if para|string in params %}
-            {% set tooltemp = 'params.'~para %}
-            M104 T{tool} S0
-        {% endif %}
+    
+    ## Set starting temps --------------------------------------------
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={params.BED_TEMP}
+    {% for tool_nr in printer.toolchanger.tool_numbers %}
+        M104 T{tool_nr} S0                                  # Disable all slicer injected toolhead temperature settings.
     {% endfor %}
     
-    ## Set right bed temp -------------------------------------------
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={params.BED_TEMP}
-    
-    ## Switch to T0 and re-home -------------------------------------
+    ## Switch to T0 and re-home ---------------------------------------
     M104 T0 S150
     G28                                                     # Homing
     T0
     M109 S150                                               # and set the curent nozzle temp to match the bed before probing
-    G28                                                     # Homing
+    G28 Z                                                   # Homing
 
-    ## Quad gantry leveling -----------------------------------------
+    ## Quad gantry leveling -------------------------------------------
     RESPOND TYPE=echo MSG='Quad Gantry Level...'
     QUAD_GANTRY_LEVEL                                       # Gantry levelling
-    G28                                                     # Homing
+    G28 Z                                                   # Homing
 
-    ## Bes Mesh -----------------------------------------------------
+    ## Bes Mesh -------------------------------------------------------
     BED_MESH_CLEAR                                          # Unloading net beds
     {% if printer['exclude_object'].objects == null %}
         BED_MESH_PROFILE LOAD=full_bed                      # Loading the net bed
     {% else %}
-        TOOL_BED_MESH_CALIBRATE                             # BED_MESH_CALIBRATE, but with compensation for tool_z_offset
+        BED_MESH_CALIBRATE                                  # BED_MESH_CALIBRATE
     {% endif %}
 
-    ## Skew ---------------------------------------------------------
+    ## Skew -----------------------------------------------------------
     SET_SKEW CLEAR=1                                        # Clear skew compensation
     SKEW_PROFILE LOAD=calilantern_skew_profile              # Load skew compensation
 
-    ## Re-home -------------------------------------------------------
+    ## Re-home --------------------------------------------------------
     G28                                                     # Homing
-
-    ## Set nozzle temps ----------------------------------------------
-    {% set tools = printer.toolchanger.tool_numbers %}
-    {% for tool in tools %}
-        {% set para = "T"~tool~"_TEMP" %}
-        {% if para|string in params %}
-            {% set tooltemp = 'params.'~para %}
-            M104 T{tool} S{tooltemp}
-        {% else %}
-            M104 T{tool} S0
-        {% endif %}
-    {% endfor %}
-
-    {% for tool in tools %}
-        {% set para = "T"~tool~"_TEMP" %}
-        {% if para|string in params %}
-            {% set tooltemp = 'params.'~para %}
-            M109 T{tool} S{tooltemp}
-        {% endif %}
-    {% endfor %}
     
-    ## Move nozzle to corner ----------------------------------------
-    G1 X15 F9000
+    ## Move nozzle to corner ------------------------------------------
+    G1 X0 F9000
+
+    ## Set print temps ------------------------------------------------
+    {% if "T0_TEMP" in params %}                            # Check if T0 is used
+        M104 T0 S{ params.T0_TEMP }
+    {% endif %}
+    {% if "T1_TEMP" in params %}
+        M104 T1 S{ params.T1_TEMP }
+    {% endif %}
+    {% if "T2_TEMP" in params %}
+        M104 T2 S{ params.T2_TEMP }
+    {% endif %}
+    {% if "T3_TEMP" in params %}
+        M104 T3 S{ params.T3_TEMP }
+    {% endif %}
+    
+    ## Record wipe tower location -------------------------------------
+    {% if "WIPE_TOWER_X" in params %}
+        SET_GCODE_VARIABLE  MACRO=_WIPE_TOWER_LOCATION  VARIABLE=wx  VALUE={ params.WIPE_TOWER_X|float }
+    {% endif %}
+    {% if "WIPE_TOWER_Y" in params %}
+        SET_GCODE_VARIABLE  MACRO=_WIPE_TOWER_LOCATION  VARIABLE=wy  VALUE={ params.WIPE_TOWER_Y|float }
+    {% endif %}
+
+    ## ----------------------------------------------------------------
     RESPOND TYPE=echo MSG='Printing...'
 
-#--------------------------------------------------------------------
+#----------------------------------------------------------------------
 [gcode_macro PRINT_END]                                     # Set PRINT_END as the end-of-print macro to customise the after-print action.
 gcode:
     M400                                                    # finish off and clear buffer
@@ -92,19 +74,6 @@ gcode:
     G0 Z1.00 F9000                                          # Remove nozzle
     G90
     
-    {% set tools = printer.toolchanger.tool_numbers %}
-    {% for tool in tools|reverse %}
-        {% set para = "T"~tool~"_TEMP" %}
-        {% if para|string in params %}
-            T{tool}
-            {% if printer.extruder.temperature > params.TOOL_TEMP - 5 %}
-                G10                                         # Retracting the filament
-                G92 E0                                      # Zeroing the extruder
-        	{% endif %}
-        {% endif %}
-    {% endfor %}
-    
-    M400
     TURN_OFF_HEATERS                                        # Close the hot end
     M107                                                    # Switch off the fan.
     BED_MESH_CLEAR                                          # Unloading net beds
@@ -115,6 +84,10 @@ gcode:
     {% else %}
         G0 X340 Y340 F9000
     {% endif %}
+
+    ## Clear wipe tower location ------------------------------------
+    SET_GCODE_VARIABLE  MACRO=_WIPE_TOWER_LOCATION  VARIABLE=wx  VALUE=0.0
+    SET_GCODE_VARIABLE  MACRO=_WIPE_TOWER_LOCATION  VARIABLE=wy  VALUE=0.0
     
     RESPOND TYPE=echo MSG='Finished...'
 
@@ -178,6 +151,3 @@ gcode:
     SDCARD_RESET_FILE
     PRINT_END
     BASE_CANCEL_PRINT
-
-
-
