Update config files and documentation

--- a/Software/macro-general.cfg
+++ b/Software/macro-general.cfg
@@ -63,3 +63,12 @@ gcode:
     RESPOND TYPE=echo MSG='{"Chamber Heat Soak..."}'
     SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
     TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM=40
+
+#--------------------------------------------------------------------
+[gcode_macro DAYBREAK]
+gcode:
+    {% if printer['output_pin daylight'].value == 0.0 %}
+        SET_PIN PIN=daylight VALUE=0.50
+    {% else %}
+        SET_PIN PIN=daylight VALUE=0.00
+    {% endif %}
