--- a/Software/macro-print.cfg
+++ b/Software/macro-print.cfg
@@ -151,3 +151,9 @@ gcode:
     SDCARD_RESET_FILE
     PRINT_END
     BASE_CANCEL_PRINT
+
+#--------------------------------------------------------------------
+[gcode_macro PRINT_STATUS]
+gcode:
+    {% set obj = params.OBJ %}
+    RESPOND TYPE=echo MSG="Status for M190 {obj} is { printer[obj] }"
