--- a/Software/printer.cfg
+++ b/Software/printer.cfg
@@ -1,17 +1,10 @@
-[include shell_command.cfg]
 [include mainsail.cfg]
 [include homing.cfg]
 [include toolchanger.cfg]
 [include calibrate-offsets.cfg]
-[include tc-config-manage.cfg]
 
 [include macro-general.cfg]
 [include macro-print.cfg]
-[include macro-testing.cfg]
-[include macro-tc-nozzle_clean.cfg]
-
-[include ./T0-SB2209-Revo-LDO.cfg]
-[include ./T1-SB2209-Revo-LDO.cfg]
 
 ####################################################################################
 ## 	                MCU
@@ -295,17 +288,38 @@ aliases:
 [bed_mesh]
 speed: 200                   # Calibration speed
 horizontal_move_z: 10        # Z-axis movement speed
-mesh_min: 30,120             # Minimum calibration point coordinates x, y
+mesh_min: 30,30              # Minimum calibration point coordinates x, y
 mesh_max: 320, 320           # Maximum calibration point coordinates x, y  #350mm=320,320
 probe_count: 11,11           # Number of sampling points (7X7 is 49 points)
 mesh_pps: 2,2                # Number of supplementary sampling points
 algorithm: bicubic           # algorithmic model
 bicubic_tension: 0.2         # Algorithmic interpolation don't move
-# zero_reference_position: 175, 235
+# zero_reference_position: 175, 175
 
 ####################################################################################
-#	                         Gantry levelling 
+#	                         Klipper Screen
 ####################################################################################
+[display_status]
+[pause_resume]
+[virtual_sdcard]
+path: ~/printer_data/gcodes
+
+####################################################################################
+#	                             Others
+####################################################################################
+[skew_correction]
+[exclude_object]
+[input_shaper]
+[config_switch]
+
+####################################################################################
+#                          Session Variables
+####################################################################################
+#;<-------------------------------------------------------------
+[include macro-tc-nozzle_clean.cfg]
+[include ./T0-SB2209-Revo-LDO.cfg]
+[include ./T1-SB2209-Revo-LDO.cfg]
+#---------------------------------------------------------------
 [quad_gantry_level]
 #	Gantry Corners for 350mm Build
 gantry_corners:
@@ -323,49 +337,23 @@ horizontal_move_z: 15               # Z-axis starting height
 retries: 10                         # Number of out-of-tolerance retries
 retry_tolerance: 0.0075             # Sampling tolerance
 max_adjust: 20                      # Maximum adjustment stroke for levelling
-
-####################################################################################
-#	                         Klipper Screen
-####################################################################################
-[display_status]
-[pause_resume]
-[virtual_sdcard]
-path: ~/printer_data/gcodes
-
-####################################################################################
-#	                             Others
-####################################################################################
-[skew_correction]
-[exclude_object]
-[input_shaper]
-# [save_variables]
-# filename: ~/printer_data/config/offset-variables.cfg
-
-####################################################################################
-#                          Session Variables
-####################################################################################
-#--------------------------------------------------------------------
+#---------------------------------------------------------------
 [gcode_macro _home]
-description: Centre of print area
 variable_xh: 175.0
 variable_yh: 235.0
 variable_zh: 10.0
-variable_no_of_toolhead: 2
+variable_dock: True
 gcode:
     RESPOND TYPE=echo MSG='Print area centre: {xh}, {yh}, {zh}'
     RESPOND TYPE=echo MSG='Number of TH: {no_of_toolhead}'
 
-#--------------------------------------------------------------------
+#---------------------------------------------------------------
 [gcode_macro _WIPE_TOWER_LOCATION]
 variable_wx: 0.0
 variable_wy: 0.0
 gcode:
     RESPOND TYPE=echo MSG="WIPE_TOWER_X = {wx}"
     RESPOND TYPE=echo MSG="WIPE_TOWER_Y = {wy}"
-
-####################################################################################
-#	                         SAVES
-####################################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
