--- a/Software/toolchanger.cfg
+++ b/Software/toolchanger.cfg
@@ -298,3 +298,13 @@ gcode:
     {% else %}
         INITIALIZE_TOOLCHANGER T={printer.tool_probe_endstop.active_tool_number}
     {% endif %}
+
+#--------------------------------------------------------------------
+[gcode_macro PRINTER_CONFIG_TOGGLE]
+gcode:
+    M400
+    SAVE_CONFIG_MODE
+    M400
+    TOGGLE_CONFIG_MODE
+    M400
+    FIRMWARE_RESTART
