--- a/Software/v1.0 - MVP/config/config_wt_dock.cfg
+++ b/Software/v1.0 - MVP/config/config_wt_dock.cfg
@@ -1,6 +1,8 @@
-#;<------------------------------------------------------------------
+#;<-------------------------------------------------------------
+[include macro-tc-nozzle_clean.cfg]
 [include ./T0-SB2209-Revo-LDO.cfg]
-#--------------------------------------------------------------------
+[include ./T1-SB2209-Revo-LDO.cfg]
+#---------------------------------------------------------------
 [quad_gantry_level]
 #	Gantry Corners for 350mm Build
 gantry_corners:
@@ -8,37 +10,32 @@ gantry_corners:
 	410,420
 #  Probe points
 points:
-	50,50
+	50,130
 	50,300
 	300,300
-	300,50
+	300,130
 
 speed: 150                          # Levelling speed
 horizontal_move_z: 15               # Z-axis starting height
 retries: 10                         # Number of out-of-tolerance retries
 retry_tolerance: 0.0075             # Sampling tolerance
 max_adjust: 20                      # Maximum adjustment stroke for levelling
-#--------------------------------------------------------------------
+#---------------------------------------------------------------
 [gcode_macro _home]
 variable_xh: 175.0
-variable_yh: 175.0
+variable_yh: 235.0
 variable_zh: 10.0
-variable_dock: False
+variable_dock: True
 gcode:
     RESPOND TYPE=echo MSG='Print area centre: {xh}, {yh}, {zh}'
-    RESPOND TYPE=echo MSG='Number of TH: {no_of_toolhead}'
 
-#--------------------------------------------------------------------
+#---------------------------------------------------------------
 [gcode_macro _WIPE_TOWER_LOCATION]
 variable_wx: 0.0
 variable_wy: 0.0
 gcode:
     RESPOND TYPE=echo MSG="WIPE_TOWER_X = {wx}"
     RESPOND TYPE=echo MSG="WIPE_TOWER_Y = {wy}"
-
-####################################################################################
-#	                         SAVES
-####################################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -105,3 +102,16 @@ gcode:
 #*# pid_ki = 4.284
 #*# pid_kd = 75.574
 #*#
+#*# [tool T1]
+#*# gcode_x_offset = 0.012500
+#*# gcode_y_offset = 0.425000
+#*# gcode_z_offset = 0.220000
+#*#
+#*# [tool_probe T1]
+#*# z_offset = -0.887500
+#*#
+#*# [extruder1]
+#*# control = pid
+#*# pid_kp = 36.501
+#*# pid_ki = 4.124
+#*# pid_kd = 80.760
